--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,7 +1,7 @@
 [mod-setting-name]
 DeleteEmptyChunks_radius=Radius
-DeleteEmptyChunks_concrete=Detect Concrete
+DeleteEmptyChunks_paving=Detect Paving
 
 [mod-setting-description]
 DeleteEmptyChunks_radius=Radius of adjacent chucks to keep
-DeleteEmptyChunks_concrete=Also keep chunks containing concrete (Takes much longer to run)
+DeleteEmptyChunks_concrete=Also keep chunks containing concrete, stone paths, and hazard concrete (Takes much longer to run)
