--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -4,4 +4,4 @@ DeleteEmptyChunks_paving=Detect Paving
 
 [mod-setting-description]
 DeleteEmptyChunks_radius=Radius of adjacent chucks to keep
-DeleteEmptyChunks_concrete=Also keep chunks containing concrete, stone paths, and hazard concrete (Takes much longer to run)
+DeleteEmptyChunks_concrete=Also keep chunks containing concrete, stone paths, and hazard concrete
