--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,7 +1,21 @@
+DeleteEmptyChunks_buttontext=Delete Empty Chunks
+
+DeleteEmptyChunks_text_notifier_with=Deleting empty chunks, radius __1__, with paving
+DeleteEmptyChunks_text_notifier_without=Deleting empty chunks, radius __1__, without paving
+DeleteEmptyChunks_text_AsphaltRoads=AsphaltRoads mod detected, adding __1__ paving tiles to search
+DeleteEmptyChunks_text_force=Forces: __1__
+DeleteEmptyChunks_text_starting=Starting with __1__ chunks on "__2__" surface
+DeleteEmptyChunks_text_entities=Chunks with player entities: __1__
+DeleteEmptyChunks_text_paving=Empty chunks with paving: __1__
+DeleteEmptyChunks_text_adjacent=Adjacent chunks: __1__
+DeleteEmptyChunks_text_keep=Keeping __1__ chunks
+DeleteEmptyChunks_text_delete=Deleted __1__ chunks
+DeleteEmptyChunks_text_Factorissimo2=Skipped __1__ factory floors from Factorissimo2
+
 [mod-setting-name]
-DeleteEmptyChunks_radius=Radius
+DeleteEmptyChunks_radius=Keep Radius
 DeleteEmptyChunks_paving=Detect Paving
 
 [mod-setting-description]
 DeleteEmptyChunks_radius=Radius of adjacent chucks to keep
-DeleteEmptyChunks_concrete=Also keep chunks containing concrete, stone paths, and hazard concrete
+DeleteEmptyChunks_paving=Also keep chunks containing concrete, stone paths, hazard concrete, etc
