--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,21 +1,28 @@
 DeleteEmptyChunks_buttontext=Delete Empty Chunks
 
-DeleteEmptyChunks_text_notifier_with=Deleting empty chunks, radius __1__, with paving
-DeleteEmptyChunks_text_notifier_without=Deleting empty chunks, radius __1__, without paving
-DeleteEmptyChunks_text_AsphaltRoads=AsphaltRoads mod detected, adding __1__ paving tiles to search
+DeleteEmptyChunks_text_notifier_pr=Deleting empty chunks except those with paving and within radius __1__
+DeleteEmptyChunks_text_notifier_p=Deleting empty chunks except those with paving
+DeleteEmptyChunks_text_notifier_r=Deleting empty chunks except those within radius __1__
+DeleteEmptyChunks_text_notifier=Deleting empty chunks
+DeleteEmptyChunks_text_notifier_paving=Detected __1__ paving tiles: __2__ vanilla and __3__ from mods
 DeleteEmptyChunks_text_force=Forces: __1__
-DeleteEmptyChunks_text_starting=Starting with __1__ chunks on "__2__" surface
-DeleteEmptyChunks_text_entities=Chunks with player entities: __1__
-DeleteEmptyChunks_text_paving=Empty chunks with paving: __1__
-DeleteEmptyChunks_text_adjacent=Adjacent chunks: __1__
-DeleteEmptyChunks_text_keep=Keeping __1__ chunks
+DeleteEmptyChunks_text_starting=Starting with __1__ chunks on "__2__" surface, __3__ visible
+DeleteEmptyChunks_text_keep_epa=Keeping __1__ chunks: __2__ with entities, __3__ with paving, and __4__ adjacent
+DeleteEmptyChunks_text_keep_ep=Keeping __1__ chunks: __2__ with entities, and __3__ with paving
+DeleteEmptyChunks_text_keep_ea=Keeping __1__ chunks: __2__ with entities, and __3__ adjacent
+DeleteEmptyChunks_text_keep_e=Keeping __1__ chunks: __2__ with entities
+DeleteEmptyChunks_text_keep_pa=Keeping __1__ chunks: __2__ with paving, and __3__ adjacent
+DeleteEmptyChunks_text_keep_p=Keeping __1__ chunks: __2__ with paving
 DeleteEmptyChunks_text_delete=Deleted __1__ chunks
-DeleteEmptyChunks_text_Factorissimo2=Skipped __1__ factory floors from Factorissimo2
+DeleteEmptyChunks_text_mod_nosurface=Surface "__1__" not found. Valid surfaces: __2__
+DeleteEmptyChunks_text_mod_surfaces=Skipped __1__ surfaces created by mods
 
 [mod-setting-name]
+DeleteEmptyChunks_surface=Surface
 DeleteEmptyChunks_radius=Keep Radius
 DeleteEmptyChunks_paving=Detect Paving
 
 [mod-setting-description]
+DeleteEmptyChunks_surface=Name of surface to process (Default is "nauvis")
 DeleteEmptyChunks_radius=Radius of adjacent chucks to keep
 DeleteEmptyChunks_paving=Also keep chunks containing concrete, stone paths, hazard concrete, etc
