--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,6 @@
 DeleteEmptyChunks_buttontext=Delete Empty Chunks
 
+DeleteEmptyChunks_command=Deletes empty chunks
 DeleteEmptyChunks_text_notifier_pr=Deleting empty chunks except those with paving and within radius __1__
 DeleteEmptyChunks_text_notifier_p=Deleting empty chunks except those with paving
 DeleteEmptyChunks_text_notifier_r=Deleting empty chunks except those within radius __1__
