--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -14,8 +14,8 @@ DeleteEmptyChunks_text_keep_e=Keeping __1__ chunks: __2__ with entities
 DeleteEmptyChunks_text_keep_pa=Keeping __1__ chunks: __2__ with paving, and __3__ adjacent
 DeleteEmptyChunks_text_keep_p=Keeping __1__ chunks: __2__ with paving
 DeleteEmptyChunks_text_delete=Deleted __1__ chunks
-DeleteEmptyChunks_text_mod_nosurface=Surface "__1__" not found. Valid surfaces: __2__
-DeleteEmptyChunks_text_mod_surfaces=Skipped __1__ surfaces created by mods
+DeleteEmptyChunks_text_mod_nosurface=DeleteEmptyChunks: Surface "__1__" not found. Valid surfaces: __2__
+DeleteEmptyChunks_command=[surface] [radius] [detect-paving], Deletes empty chunks. Defaults to mod settings, e.g., /DeleteEmptyChunks nauvis 2 y
 
 [mod-setting-name]
 DeleteEmptyChunks_surface=Surface
