--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -15,7 +15,7 @@ DeleteEmptyChunks_text_keep_pa=Keeping __1__ chunks: __2__ with paving, and __3_
 DeleteEmptyChunks_text_keep_p=Keeping __1__ chunks: __2__ with paving
 DeleteEmptyChunks_text_delete=Deleted __1__ chunks
 DeleteEmptyChunks_text_mod_nosurface=DeleteEmptyChunks: Surface "__1__" not found. Valid surfaces: __2__
-DeleteEmptyChunks_command=[surface] [radius] [detect-paving], Deletes empty chunks. Defaults to mod settings, e.g., /DeleteEmptyChunks nauvis 2 y
+DeleteEmptyChunks_command={surface="[surface name]", radius=[value], paving=[true/false]}, Deletes empty chunks. Omitted values default to mod settings, e.g., /DeleteEmptyChunks {radius=0, paving=true}
 
 [mod-setting-name]
 DeleteEmptyChunks_surface=Surface
