--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,9 +1,9 @@
 DeleteEmptyChunks_buttontext=Delete Empty Chunks
 
-DeleteEmptyChunks_text_notifier_pr=Deleting empty chunks except those with paving and within radius __1__
-DeleteEmptyChunks_text_notifier_p=Deleting empty chunks except those with paving
-DeleteEmptyChunks_text_notifier_r=Deleting empty chunks except those within radius __1__
-DeleteEmptyChunks_text_notifier=Deleting empty chunks
+DeleteEmptyChunks_text_notifier_pr=__1__ deleted empty chunks except those with paving and within radius __2__
+DeleteEmptyChunks_text_notifier_p=__1__ deleted empty chunks except those with paving
+DeleteEmptyChunks_text_notifier_r=__1__ deleted empty chunks except those within radius __2__
+DeleteEmptyChunks_text_notifier=__1__ deleted empty chunks
 DeleteEmptyChunks_text_notifier_paving=Detected __1__ paving tiles: __2__ vanilla and __3__ from mods
 DeleteEmptyChunks_text_force=Forces: __1__
 DeleteEmptyChunks_text_starting=Starting with __1__ chunks on "__2__" surface, __3__ visible
@@ -16,6 +16,7 @@ DeleteEmptyChunks_text_keep_p=Keeping __1__ chunks: __2__ with paving
 DeleteEmptyChunks_text_delete=Deleted __1__ chunks
 DeleteEmptyChunks_text_mod_nosurface=DeleteEmptyChunks: Surface "__1__" not found. Valid surfaces: __2__
 DeleteEmptyChunks_command={surface="[surface name]", radius=[value], paving=[true/false]}, Deletes empty chunks. Omitted values default to mod settings, e.g., /DeleteEmptyChunks {radius=0, paving=true}
+DeleteEmptyChunks_adminsonly=Only admins can delete empty chunks
 
 [mod-setting-name]
 DeleteEmptyChunks_surface=Surface
