Use dot (".") as surface name to select current

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -24,6 +24,6 @@ DeleteEmptyChunks_radius=Keep Radius
 DeleteEmptyChunks_paving=Detect Paving
 
 [mod-setting-description]
-DeleteEmptyChunks_surface=Name of surface to process (Default is "nauvis")
+DeleteEmptyChunks_surface=Name of surface to process (Default is "nauvis"). Use "." to select current you are on
 DeleteEmptyChunks_radius=Radius of adjacent chucks to keep
 DeleteEmptyChunks_paving=Also keep chunks containing concrete, stone paths, hazard concrete, etc
